Added Vidyard hooks.

--- a/PromoStudio.Web/Content/css/site.less
+++ b/PromoStudio.Web/Content/css/site.less
@@ -74,11 +74,8 @@ section.content {
 
 @import url('bootstrap-overrides.less');
 @import url('navigation.less');
+@import url('ps-elements.less');
 @import url('login.less');
+@import url('videos.less');
 @import url('build.less');
 @import url('vidyard.less');
-@import url('ps-elements.less');
-
-
-
-/* TODO: Move to build-audio.less */
