--- a/PromoStudio.Web/Content/css/ps-elements.css
+++ b/PromoStudio.Web/Content/css/ps-elements.css
@@ -9,10 +9,72 @@
   ---------------------------------------------------*/
 /* white-label banner */
 /* rounded corner size */.thumbcontainer {
+  /* VIDEOS */
+
   /* PHOTOS */
 
   /* AUDIO */
 
+}
+.thumbcontainer > a.footage-thumbnail,
+.thumbcontainer > a.footage-thumbnail:link,
+.thumbcontainer > a.footage-thumbnail:hover,
+.thumbcontainer > a.footage-thumbnail:active,
+.thumbcontainer > a.footage-thumbnail:visited {
+  color: #4f4f4f;
+}
+.thumbcontainer > a.footage-thumbnail {
+  display: block;
+  float: left;
+  width: 272px;
+  margin: 20px 0 0 20px;
+  overflow: hidden;
+  text-decoration: none;
+  color: #4f4f4f;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 1px 2px #969696;
+  -moz-box-shadow: 0 1px 2px #969696;
+  box-shadow: 0 1px 2px #969696;
+}
+.thumbcontainer > a.footage-thumbnail > .footage-preview {
+  background-color: #4a4a4a;
+  background-position: center;
+  background-repeat: no-repeat;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  -webkit-background-size: cover;
+  background-size: cover;
+  height: 140px;
+}
+.thumbcontainer > a.footage-thumbnail > .footage-preview > .footage-play {
+  display: none;
+  position: relative;
+  top: 48px;
+  left: 114px;
+  width: 43px;
+  height: 43px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  background-color: #ffffff;
+  opacity: 0.6;
+  -webkit-box-shadow: 0 0 5px #4a4a4a;
+  -moz-box-shadow: 0 0 5px #4a4a4a;
+  box-shadow: 0 0 5px #4a4a4a;
+}
+.thumbcontainer > a.footage-thumbnail > .footage-preview > .footage-play > .glyphicons:before {
+  margin: -2px 0 0 9px;
+  color: #4a4a4a;
+}
+.thumbcontainer > a.footage-thumbnail:hover {
+  -webkit-box-shadow: 0 1px 8px #969696;
+  -moz-box-shadow: 0 1px 8px #969696;
+  box-shadow: 0 1px 8px #969696;
+}
+.thumbcontainer > a.footage-thumbnail:hover > .footage-preview > .footage-play {
+  display: block;
 }
 .thumbcontainer > a.photo-thumbnail,
 .thumbcontainer > a.photo-thumbnail:link,
