--- a/PromoStudio.Web/Content/css/ps-elements.less
+++ b/PromoStudio.Web/Content/css/ps-elements.less
@@ -3,7 +3,67 @@
 @mediabgcolor: darken(@bgbasecolor, 71%);
 @shadowcolor: lighten(@mediabgcolor, 30%);
 
+
 .thumbcontainer {
+    /* VIDEOS */
+    > a.footage-thumbnail,
+    > a.footage-thumbnail:link,
+    > a.footage-thumbnail:hover,
+    > a.footage-thumbnail:active,
+    > a.footage-thumbnail:visited {
+        color: @basecolor;
+    }
+
+    > a.footage-thumbnail {
+        display: block;
+        float: left;
+        width: 272px;
+        margin: 20px 0 0 20px;
+        overflow: hidden;
+        text-decoration: none;
+        color: @basecolor;
+        .rounded(@cs);
+        .box-shadow(0 1px 2px @shadowcolor);
+
+        > .footage-preview {
+            background-color: @mediabgcolor;
+            background-position: center;
+            background-repeat: no-repeat;
+            .bgSize(cover);
+            height: 140px;
+
+            > .footage-play {
+                display: none;
+                position: relative;
+                top: 48px;
+                left: 114px;
+                width: 43px;
+                height: 43px;
+                .rounded(@cs);
+                background-color: @bgbasecolor;
+                opacity: 0.6;
+                .box-shadow(0 0 5px @mediabgcolor);
+
+                > .glyphicons:before {
+                    margin: -2px 0 0 9px;
+                    color: @mediabgcolor;
+                }
+            }
+        }
+    }
+
+        > a.footage-thumbnail:hover {
+            .box-shadow(0 1px 8px @shadowcolor);
+
+            > .footage-preview {
+                > .footage-play {
+                    display: block;
+                }
+            }
+        }
+
+
+
     /* PHOTOS */
     > a.photo-thumbnail,
     > a.photo-thumbnail:link,
@@ -165,6 +225,9 @@
                 display: block;
             }
         }
+
+
+
     /* AUDIO */
     > a.audio-thumbnail,
     > a.audio-thumbnail:link,
