checkpoint for designer

--- a/PromoStudio.Web/Content/css/themevariables.less
+++ b/PromoStudio.Web/Content/css/themevariables.less
@@ -16,6 +16,7 @@
 @basecolor: #4f4f4f;
 
 @completedcolor: #57c446;
+@incompletecolor: @bannerbgcolor;
 
 
 @linkcolor: desaturate(@bannerbgcolor, 10%);
