--- a/PromoStudio.Web/Content/css/ps-elements.less
+++ b/PromoStudio.Web/Content/css/ps-elements.less
@@ -1,4 +1,5 @@
 ﻿@import url('themevariables.less');
+@import url('animations.less');
 
 @mediabgcolor: darken(@bgbasecolor, 71%);
 @shadowcolor: lighten(@mediabgcolor, 30%);
