--- a/PromoStudio.Web/Content/css/videos.less
+++ b/PromoStudio.Web/Content/css/videos.less
@@ -2,6 +2,9 @@
 @import url('elements.less');
 @import url('themevariables.less');
 
+.video-preview {
+    margin-top: 20px;
+}
 
 .thumbcontainer {
     > a.footage-thumbnail {
