added text substitution

--- a/PromoStudio.Web/Content/css/build-branding.less
+++ b/PromoStudio.Web/Content/css/build-branding.less
@@ -16,3 +16,26 @@
         width: 800px;
     }
 }
+
+.text-item {
+    margin-bottom: 18px;
+
+    .form-control {
+        min-width:200px;
+        width:50%;
+    }
+
+    .text-description,
+    .text-timing {
+        color: @contentmutedcolor;
+    }
+
+    .text-description {
+        font-size: 14px;
+    }
+
+    .text-timing {
+        text-transform: uppercase;
+        font-size: 12px;
+    }
+}
