--- a/PromoStudio.Web/Content/css/site.css
+++ b/PromoStudio.Web/Content/css/site.css
@@ -983,6 +983,24 @@ a.twitterSignin {
 #photoChooserModal .modal-dialog {
   width: 800px;
 }
+.text-item {
+  margin-bottom: 18px;
+}
+.text-item .form-control {
+  min-width: 200px;
+  width: 50%;
+}
+.text-item .text-description,
+.text-item .text-timing {
+  color: #a8a8a8;
+}
+.text-item .text-description {
+  font-size: 14px;
+}
+.text-item .text-timing {
+  text-transform: uppercase;
+  font-size: 12px;
+}
 /* Allows Vidyard Lightbox to play nice with Bootstrap z-indexes*/
 div.vidyard_tmask {
   z-index: 2000 !important;
