css updates from designer

--- a/PromoStudio.Web/Content/css/build.css
+++ b/PromoStudio.Web/Content/css/build.css
@@ -44,10 +44,11 @@
 }
 .build-steps .build-previous-step > .glyphicons,
 .build-steps .build-previous-step > .glyphicons:before {
-  margin: -2px 0 0 0;
+  float: left;
+  margin: 5px 0 0 0;
 }
 .build-steps .build-previous-step label {
-  margin: -14px 0 2px 80px;
+  margin: 0 0 2px 80px;
 }
 .build-steps .build-next-step {
   float: right;
@@ -59,7 +60,8 @@
   margin: -2px -20px 0 0;
 }
 .build-steps .build-next-step label {
-  margin: -14px 56px 2px 0;
+  margin-right: 56px;
+  display: block;
 }
 .build-steps a,
 .build-steps a:link,
