--- a/PromoStudio.Web/Content/css/build.less
+++ b/PromoStudio.Web/Content/css/build.less
@@ -40,11 +40,12 @@
 
         > .glyphicons,
         > .glyphicons:before {
-            margin: -2px 0 0 0;
+	        float: left;
+            margin: 5px 0 0 0;
         }
 
         label {
-            margin: -14px 0 2px 80px;
+            margin: 0 0 2px 80px;
         }
     }
 
@@ -59,10 +60,11 @@
         }
 
         label {
-            margin: -14px 56px 2px 0;
+            margin-right: 56px;
+            display: block;
         }
     }
-
+    
     a,
     a:link,
     a:visited {
