--- a/PromoStudio.Web/Content/css/site.less
+++ b/PromoStudio.Web/Content/css/site.less
@@ -52,7 +52,7 @@ div.color-band {
     h1 {
         .headerfont();
         padding: 0;
-        margin: -12px 0 0 0;
+        margin: 0;
         font-size: 32pt;
     }
 
