--- a/PromoStudio.Web/Content/css/site.css
+++ b/PromoStudio.Web/Content/css/site.css
@@ -1,6 +1,8 @@
 ﻿@import url('glyphicons.css');
 
 @import url('//fonts.googleapis.com/css?family=Josefin+Sans:100&.css');
+
+@import url('jplayer.blue.monday.css');
 /*---------------------------------------------------
     LESS Elements 0.9
   ---------------------------------------------------
@@ -552,22 +554,13 @@ div.navbar li .arrow:after {
 .thumbcontainer > a.photo-thumbnail.selected:hover .photo-select {
   display: block;
 }
-.thumbcontainer > a.audio-thumbnail,
-.thumbcontainer > a.audio-thumbnail:link,
-.thumbcontainer > a.audio-thumbnail:hover,
-.thumbcontainer > a.audio-thumbnail:active,
-.thumbcontainer > a.audio-thumbnail:visited {
-  color: #4f4f4f;
-}
-.thumbcontainer > a.audio-thumbnail {
+.thumbcontainer > div.audioContainer {
   display: block;
   float: left;
-  width: 400px;
+  width: 420px;
   margin: 0 8px 8px 0;
   overflow: hidden;
-  text-decoration: none;
   background-color: #ffffff;
-  color: #4f4f4f;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -575,7 +568,46 @@ div.navbar li .arrow:after {
   -moz-box-shadow: 0 1px 2px #969696;
   box-shadow: 0 1px 2px #969696;
 }
-.thumbcontainer > a.audio-thumbnail > .audio-preview {
+.thumbcontainer > div.audioContainer > .audio-player {
+  width: 100%;
+  -webkit-border-top-right-radius: 0;
+  -webkit-border-bottom-right-radius: 4px;
+  -webkit-border-bottom-left-radius: 4px;
+  -webkit-border-top-left-radius: 0;
+  -moz-border-radius-topright: 0;
+  -moz-border-radius-bottomright: 4px;
+  -moz-border-radius-bottomleft: 4px;
+  -moz-border-radius-topleft: 0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 0;
+  -moz-background-clip: padding-box;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+}
+.thumbcontainer > div.audioContainer > .audio-player .jp-title {
+  display: none;
+}
+.thumbcontainer > div.audioContainer > .audio-player .jp-audio {
+  border: 1px solid transparent;
+}
+.thumbcontainer > div.audioContainer > .audio-player .jp-controls {
+  width: 400px;
+  padding: 20px 0 0 20px;
+}
+.thumbcontainer > div.audioContainer > a.audio-thumbnail,
+.thumbcontainer > div.audioContainer > a.audio-thumbnail:link,
+.thumbcontainer > div.audioContainer > a.audio-thumbnail:hover,
+.thumbcontainer > div.audioContainer > a.audio-thumbnail:active,
+.thumbcontainer > div.audioContainer > a.audio-thumbnail:visited {
+  color: #4f4f4f;
+}
+.thumbcontainer > div.audioContainer > a.audio-thumbnail {
+  text-decoration: none;
+  color: #4f4f4f;
+}
+.thumbcontainer > div.audioContainer > a.audio-thumbnail > .audio-preview {
   background-color: #4a4a4a;
   background-position: left;
   background-repeat: no-repeat;
@@ -587,107 +619,85 @@ div.navbar li .arrow:after {
   -webkit-background-size: cover;
   background-size: cover;
 }
-.thumbcontainer > a.audio-thumbnail > .audio-preview > .glyphicons {
+.thumbcontainer > div.audioContainer > a.audio-thumbnail > .audio-preview > .glyphicons {
   float: left;
 }
-.thumbcontainer > a.audio-thumbnail > .audio-preview > .glyphicons:before {
+.thumbcontainer > div.audioContainer > a.audio-thumbnail > .audio-preview > .glyphicons:before {
   margin: 16px 0 0 20px;
   font-size: 36px;
   color: #a8a8a8;
 }
-.thumbcontainer > a.audio-thumbnail > .audio-preview > .audio-play {
-  display: none;
-  margin: 17px 0 0 22px;
-  height: 36px;
-  width: 36px;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  background-color: #ffffff;
-  opacity: 0.6;
-  -webkit-box-shadow: 0 0 5px #4a4a4a;
-  -moz-box-shadow: 0 0 5px #4a4a4a;
-  box-shadow: 0 0 5px #4a4a4a;
-}
-.thumbcontainer > a.audio-thumbnail > .audio-preview > .audio-play > span.glyphicons,
-.thumbcontainer > a.audio-thumbnail > .audio-preview > .audio-play > span.glyphicons:before {
-  font-size: 24px;
-  color: #4a4a4a;
-}
-.thumbcontainer > a.audio-thumbnail > .audio-preview > .audio-play > span.glyphicons:before {
-  margin: -6px 0 0 5px;
-}
-.thumbcontainer > a.audio-thumbnail > .audio-title {
+.thumbcontainer > div.audioContainer > a.audio-thumbnail > .audio-title {
   float: left;
   display: block;
-  width: 240px;
+  width: 260px;
   margin: 2px 0 0 6px;
 }
-.thumbcontainer > a.audio-thumbnail > .audio-title > .audio-main-title {
+.thumbcontainer > div.audioContainer > a.audio-thumbnail > .audio-title > .audio-main-title {
   display: block;
   font-size: 16px;
   color: #4f4f4f;
 }
-.thumbcontainer > a.audio-thumbnail > .audio-title > .audio-sub-title {
+.thumbcontainer > div.audioContainer > a.audio-thumbnail > .audio-title > .audio-sub-title {
   display: block;
   font-size: 14px;
   color: #a8a8a8;
 }
-.thumbcontainer > a.audio-thumbnail .audio-select,
-.thumbcontainer > a.audio-thumbnail .audio-deselect {
+.thumbcontainer > div.audioContainer > a.audio-thumbnail .audio-select,
+.thumbcontainer > div.audioContainer > a.audio-thumbnail .audio-deselect {
   float: left;
 }
-.thumbcontainer > a.audio-thumbnail .audio-select .glyphicons:before,
-.thumbcontainer > a.audio-thumbnail .audio-deselect .glyphicons:before {
+.thumbcontainer > div.audioContainer > a.audio-thumbnail .audio-select .glyphicons:before,
+.thumbcontainer > div.audioContainer > a.audio-thumbnail .audio-deselect .glyphicons:before {
   margin-top: 5px;
   margin-left: 26px;
   font-size: 30px;
 }
-.thumbcontainer > a.audio-thumbnail .audio-select {
+.thumbcontainer > div.audioContainer > a.audio-thumbnail .audio-select {
   display: none;
 }
-.thumbcontainer > a.audio-thumbnail .audio-select .glyphicons:before {
+.thumbcontainer > div.audioContainer > a.audio-thumbnail .audio-select .glyphicons:before {
   color: #57c446;
 }
-.thumbcontainer > a.audio-thumbnail .audio-deselect {
+.thumbcontainer > div.audioContainer > a.audio-thumbnail .audio-deselect {
   display: block;
 }
-.thumbcontainer > a.audio-thumbnail .audio-deselect .glyphicons:before {
+.thumbcontainer > div.audioContainer > a.audio-thumbnail .audio-deselect .glyphicons:before {
   color: #9c9c9c;
 }
-.thumbcontainer > a.audio-thumbnail:hover {
+.thumbcontainer > div.audioContainer > a.audio-thumbnail:hover {
   -webkit-box-shadow: 0 1px 8px #969696;
   -moz-box-shadow: 0 1px 8px #969696;
   box-shadow: 0 1px 8px #969696;
 }
-.thumbcontainer > a.audio-thumbnail:hover .audio-play {
+.thumbcontainer > div.audioContainer > a.audio-thumbnail:hover .audio-play {
   display: block;
 }
-.thumbcontainer > a.audio-thumbnail:hover .audio-select {
+.thumbcontainer > div.audioContainer > a.audio-thumbnail:hover .audio-select {
   display: block;
 }
-.thumbcontainer > a.audio-thumbnail:hover .audio-select .glyphicons:before {
+.thumbcontainer > div.audioContainer > a.audio-thumbnail:hover .audio-select .glyphicons:before {
   color: #b6deb0;
 }
-.thumbcontainer > a.audio-thumbnail:hover .audio-deselect {
+.thumbcontainer > div.audioContainer > a.audio-thumbnail:hover .audio-deselect {
   display: none;
 }
-.thumbcontainer > a.audio-thumbnail.selected,
-.thumbcontainer > a.audio-thumbnail.selected:hover {
+.thumbcontainer > div.audioContainer > a.audio-thumbnail.selected,
+.thumbcontainer > div.audioContainer > a.audio-thumbnail.selected:hover {
   -webkit-box-shadow: 0 1px 8px #57c446;
   -moz-box-shadow: 0 1px 8px #57c446;
   box-shadow: 0 1px 8px #57c446;
 }
-.thumbcontainer > a.audio-thumbnail.selected .audio-select,
-.thumbcontainer > a.audio-thumbnail.selected:hover .audio-select {
+.thumbcontainer > div.audioContainer > a.audio-thumbnail.selected .audio-select,
+.thumbcontainer > div.audioContainer > a.audio-thumbnail.selected:hover .audio-select {
   display: block;
 }
-.thumbcontainer > a.audio-thumbnail.selected .audio-select .glyphicons:before,
-.thumbcontainer > a.audio-thumbnail.selected:hover .audio-select .glyphicons:before {
+.thumbcontainer > div.audioContainer > a.audio-thumbnail.selected .audio-select .glyphicons:before,
+.thumbcontainer > div.audioContainer > a.audio-thumbnail.selected:hover .audio-select .glyphicons:before {
   color: #57c446;
 }
-.thumbcontainer > a.audio-thumbnail.selected .audio-deselect,
-.thumbcontainer > a.audio-thumbnail.selected:hover .audio-deselect {
+.thumbcontainer > div.audioContainer > a.audio-thumbnail.selected .audio-deselect,
+.thumbcontainer > div.audioContainer > a.audio-thumbnail.selected:hover .audio-deselect {
   display: none;
 }
 a.signinBtn {
@@ -728,7 +738,7 @@ a.twitterSignin {
 }
 .thumbcontainer > a.footage-thumbnail .footage-loading .glyphicons:before {
   font-size: 48px;
-  color: #3d7395;
+  color: transparent;
 }
 .thumbcontainer > a.footage-thumbnail .footage-loading .footage-loading-msg {
   width: 272px;
