--- a/PromoStudio.Web/Content/css/videos.less
+++ b/PromoStudio.Web/Content/css/videos.less
@@ -11,11 +11,12 @@
 
         .footage-loading {
             display: none;
-
+            
             .glyphicons:before {
                 font-size: 48px;
                 //.icon-spin();
-                color: @incompletecolor;
+                //color: @incompletecolor;
+                color:transparent;
             }
 
             .footage-loading-msg {
