fixed titles, more audio player styling

--- a/PromoStudio.Web/Views/Videos/Index.cshtml
+++ b/PromoStudio.Web/Views/Videos/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using PromoStudio.Resources
 @{
-    ViewBag.Title = @Strings.Videos__Your_Videos;
+    ViewBag.Title = Strings.Videos__Your_Videos;
 }
 
 @section scripts
