--- a/PromoStudio.Web/Content/css/site.css
+++ b/PromoStudio.Web/Content/css/site.css
@@ -23,14 +23,14 @@ body {
 a,
 a:link,
 a:visited {
-  color: #48718b;
+  color: #0974b5;
 }
 a:hover,
 a:active {
-  color: #137dbf;
+  color: #0076be;
 }
 div.color-band {
-  background-color: #3d7395;
+  background-color: #0076be;
   width: 100%;
   height: 75px;
   margin: 0;
@@ -766,7 +766,7 @@ a.twitterSignin {
   text-align: center;
   margin: 44px 0 0 0;
   font-size: 22px;
-  color: #3d7395;
+  color: #0076be;
 }
 .thumbcontainer > a.footage-thumbnail > .footage-description {
   height: 52px;
@@ -797,7 +797,7 @@ a.twitterSignin {
 .thumbcontainer > a.footage-thumbnail.incomplete .footage-title,
 .thumbcontainer > a.footage-thumbnail.incomplete:hover .footage-title {
   top: 8px;
-  color: #3d7395;
+  color: #0076be;
 }
 .thumbcontainer > a.footage-thumbnail.incomplete .footage-status,
 .thumbcontainer > a.footage-thumbnail.incomplete:hover .footage-status {
