--- a/PromoStudio.Web/Content/less/all.less
+++ b/PromoStudio.Web/Content/less/all.less
@@ -323,23 +323,25 @@ p{margin:0 0 36px;}
 	overflow:hidden;
 }
 .list-video .video{
-	height:163px;
+	height:180px;
 	position:relative;
 }
 .list-video .play{
 	position:absolute;
 	width:100%;
 	height:100%;
-	background:url(../images/btn-play.png) no-repeat 50% 54%;
+	background:transparent;
 	top:0;
 	left:0;
 	right:0;
 	bottom:0;
 	text-indent:-9999px;
 	overflow:hidden;
-	display:none;
+	display:block;
 }
-.list-video .checked .play{display:block;}
+.list-video .play:hover{    
+	background:url(../images/btn-play.png) no-repeat 50% 54%;
+}
 .list-video img{
 	height:auto;
 	display:block;
