--- a/PromoStudio.Web/Views/Shared/_Layout.cshtml
+++ b/PromoStudio.Web/Views/Shared/_Layout.cshtml
@@ -3,12 +3,9 @@
 @using PromoStudio.Resources
 @using PromoStudio.Web
 @{
-    var user = Model.User;
-
     var useOptimizedScripts = PromoStudio.Web.Properties.Settings.Default.UseOptimizedScripts;
-
     var title = Strings.PromoStudio;
-    // TODO: Any additional title stuff here
+    // TODO: Any additional title stuff from child views here
 }
 <!DOCTYPE html>
 <html>
@@ -19,6 +16,14 @@
     <meta name="robots" content="noindex, nofollow">
     <link href="~/Content/css/fancybox.min.css" rel="stylesheet" />
     <link href="~/Content/css/site.min.css" rel="stylesheet" />
+    <style type="text/css">
+        @* White label CSS - Also change Strings.PromoStudio *@
+        .logo {
+            background: url(@Url.Content("~/Content/images/logo.png")) no-repeat;
+            width: 284px;
+            height: 51px;
+        }
+    </style>
     <script type="text/javascript">if(navigator.userAgent.match(/IEMobile\/10\.0/)){var msViewportStyle=document.createElement("style");msViewportStyle.appendChild(document.createTextNode("@@-ms-viewport{width:auto!important}"));document.getElementsByTagName("head")[0].appendChild(msViewportStyle)};</script>
 	<!--[if lt IE 9]><link media="all" rel="stylesheet" href="/Content/css/ie.css"><script type="text/javascript" src="/Scripts/lib/ie.js"></script><![endif]-->
 </head>
@@ -29,7 +34,10 @@
 			@* header *@
 			<header id="header">
 				<div class="header-holder">
-					@Html.Partial("_Header")
+                    @* logo *@
+                    <strong class="logo">
+                        <a href="@Url.Action("Index", "Home")">@Strings.PromoStudio</a>
+                    </strong>
 					@* menu *@
 					<nav class="menu">
 						<ul>
