photo chooser checkpoint

--- a/PromoStudio.Web/Content/less/all.less
+++ b/PromoStudio.Web/Content/less/all.less
@@ -380,7 +380,9 @@ p{margin:0 0 36px;}
 	overflow:hidden;
 	float:right;
 }
-.lightbox .video-holder{
+.lightbox .video-holder,
+.lightbox .modal-dialog
+{
 	height:100%;
 	position:relative;
 }
