--- a/PromoStudio.Web/Views/Account/Index.cshtml
+++ b/PromoStudio.Web/Views/Account/Index.cshtml
@@ -115,7 +115,7 @@
 							<ul class="cards">
 								<li><img src="images/card-visa.gif" width="48" height="17" alt="image description"></li>
 								<li><img src="images/card-mc.gif" width="52" height="31" alt="image description"></li>
-								<li><img src="images/card-ameex.gif" width="35" height="30" alt="image description"></li>
+								<li><img src="images/card-amex.gif" width="35" height="30" alt="image description"></li>
 								<li><img src="images/card-discover.gif" width="46" height="30" alt="image description"></li>
 							</ul>
 							<div class="block">
