completed customize page basic functionality.

--- a/PromoStudio.Web/Content/less/all.less
+++ b/PromoStudio.Web/Content/less/all.less
@@ -111,7 +111,7 @@ p {
     margin: 0 -9999px 56px;
     padding: 0 9999px;
     position: relative;
-    z-index: 10000;
+    z-index: 7000;
     background: #fff;
 }
 
@@ -1964,6 +1964,15 @@ input[type="submit"] {
                 text-transform: uppercase;
                 text-shadow: 1px 0 3px #000;
             }
+
+.customize-logo.upload-image img {
+    display: block;
+    border: 1px solid #eee;
+    border-radius: 4px;
+    height: 130px;
+    max-width: 100%;
+}
+
 /* large-image */
 .large-image {
     position: relative;
