Completed photo/logo upload

--- a/PromoStudio.Web/Content/less/all.less
+++ b/PromoStudio.Web/Content/less/all.less
@@ -802,6 +802,11 @@ p {
     padding: 0 5px 0 0;
 }
 
+.builder-edit-photo .btn-holder {
+    padding:0;
+    margin-top:12px;
+}
+
 .signs {
     display: block;
     font: 16px/18px 'ProximaNovaRegular', Arial, Helvetica, sans-serif;
