first pass at fixing cross-browser issues with upload

--- a/PromoStudio.Web/Content/less/all.less
+++ b/PromoStudio.Web/Content/less/all.less
@@ -1956,7 +1956,10 @@ input[type="submit"] {
 
             .list-buttons li .upload-image img {
                 display: block;
+                height: 100%;
+                margin: auto;
                 max-width: 100%;
+                width: auto;
             }
 
             .list-buttons li .upload-image .title {
