--- a/PromoStudio.Web/Content/less/ps-choosermodal.less
+++ b/PromoStudio.Web/Content/less/ps-choosermodal.less
@@ -34,6 +34,8 @@
             display: block;
             height: auto;
             max-width: 100%;
+            max-height: 180px;
+            margin:auto;
         }
     }
 
