fix audio playback

--- a/PromoStudio.Web/Content/less/all.less
+++ b/PromoStudio.Web/Content/less/all.less
@@ -989,6 +989,8 @@ input[type="submit"] {
 
     .list-of-audio label {
         display: block;
+        max-height: 2.1em;
+        overflow: hidden;
     }
 
     .list-of-audio .image {
