--- a/PromoStudio.Web/Content/less/ps.less
+++ b/PromoStudio.Web/Content/less/ps.less
@@ -39,6 +39,7 @@ a.twitterSignin {
 
 div.audio-player {
     font-size: 12pt;
+    opacity: 0;
 
     div.jp-interface {
         height: 56px !important;
