added script tab checkboxes

--- a/PromoStudio.Web/Content/less/jcf.less
+++ b/PromoStudio.Web/Content/less/jcf.less
@@ -30,14 +30,30 @@
     margin: 18px 0 0;
 }
 
+.tabset ul li a .chk-area {
+    width: 20px;
+    height: 20px;
+    float:initial;
+    display:inline-block;
+    margin: 0 0 0 14px;
+    position: relative;
+    top: 5px;
+    background-position: 0 -59px;
+}
+
 .action-block .chk-area {
     float: left;
     margin: 0 11px 0 0;
 }
 
 .action-block .chk-checked,
-.list-of-audio .chk-checked {
+.list-of-audio .chk-checked,
+.tabset ul li a .chk-checked {
     background-position: 0 -79px;
+}
+
+.check-holder .chk-area {
+    margin: 15px 9px 0 0;
 }
 
 .check-holder .chk-area {
