better audio page styling

--- a/PromoStudio.Web/Content/less/all.less
+++ b/PromoStudio.Web/Content/less/all.less
@@ -914,7 +914,7 @@ input[type="submit"] {
 
     .list-of-audio li {
         float: left;
-        width: 45.3%;
+        width: 44.9%;
         border: 1px solid #ededed;
         border-radius: 5px;
         height: 53px;
@@ -975,6 +975,7 @@ input[type="submit"] {
         font-size: 15px;
         line-height: 20px;
         font: 15px/20px 'ProximaNovaRegular', Arial, Helvetica, sans-serif;
+        margin-right: 20px;
     }
 
         .list-of-audio .info strong {
