--- a/PromoStudio.Web/Content/less/jcf.less
+++ b/PromoStudio.Web/Content/less/jcf.less
@@ -30,6 +30,10 @@
     margin: 18px 0 0;
 }
 
+.list-of-audio .chk-area {
+    margin: 18px 0 0 -20px;
+}
+
 .tabset ul li a .chk-area {
     width: 20px;
     height: 20px;
